--- a/style.css
+++ b/style.css
@@ -141,3 +141,29 @@
     }
 }  
 
+.carousel {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .carousel-slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .slide {
+    min-width: 100%;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    background-color: #ccc;
+    img {
+        height: 600px;
+        width: 100%;
+    }
+  }
+
